// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render as disabled 1`] = `
<li
  aria-disabled={true}
  className="item is-disabled"
  role="menuitem"
  tabIndex="-1"
>
  <div
    className="title"
  />
</li>
`;

exports[`should render with className 1`] = `
<li
  aria-disabled={false}
  className="item textClass"
  onClick={[Function]}
  onKeyDown={[Function]}
  role="menuitem"
  tabIndex="0"
>
  <div
    className="title"
  />
</li>
`;

exports[`should render with isSelectable 1`] = `
<li
  aria-disabled={false}
  className="item"
  onClick={[Function]}
  onKeyDown={[Function]}
  role="menuitemcheckbox"
  tabIndex="0"
>
  <div
    className="title"
  />
</li>
`;

exports[`should render with selected 1`] = `
<li
  aria-disabled={false}
  className="item"
  onClick={[Function]}
  onKeyDown={[Function]}
  role="menuitem"
  tabIndex="0"
>
  <div
    className="title"
  />
</li>
`;

exports[`should render with text 1`] = `
<li
  aria-disabled={false}
  className="item"
  onClick={[Function]}
  onKeyDown={[Function]}
  role="menuitem"
  tabIndex="0"
>
  <div
    className="title"
  >
    Text
  </div>
</li>
`;
